<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="32dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pager_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_hint" />

        <TextView
            android:id="@+id/pager_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pager_title"
            tools:text="@string/start_time" />

        <ImageView
            android:id="@+id/pager_priority_level"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/priority_level"
            android:src="@drawable/ic_priority_low"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/pager_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="fill_vertical"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/pager_priority_level"
            app:layout_constraintEnd_toEndOf="@id/pager_priority_level"
            app:layout_constraintStart_toStartOf="@id/pager_priority_level"
            app:layout_constraintTop_toTopOf="@id/pager_priority_level"
            app:layout_constraintVertical_bias="0.35"
            tools:ignore="TextContrastCheck"
            tools:text="60" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:text="@string/minutes"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/pager_priority_level"
            app:layout_constraintStart_toStartOf="@id/pager_priority_level"
            app:layout_constraintTop_toBottomOf="@id/pager_minutes"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_open_count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_count_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pager_priority_level" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>